notes/canary-deployment/nginx-v1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1-service
spec:
  selector:
    app: nginx
    version: v1
  ports:
  - port: 80
    targetPort: 80
