notes/canary-deployment/nginx-v2-svc.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-v2-service
# spec:
#   selector:
#     app: nginx
#     version: v2
#   ports:
#   - port: 80
#     targetPort: 80


apiVersion: v1
kind: Service
metadata:
  name: apache-canary
spec:
  selector:
    app: myapp
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
